# pr2_apps

./: .hgignore  .travis.yml  CMakeLists.txt  README.md  stack.xml
pr2_app_manager/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
pr2_app_manager/apps/pr2_make_a_map_app/: .hgtags  CMakeLists.txt  make_a_map.app  make_a_map.launch  package.xml  stack.xml
pr2_app_manager/apps/pr2_map_navigation_app/: .hgtags  CMakeLists.txt  amcl_node.xml  map_nav.app  map_nav.launch  package.xml  pr2_2dnav.launch  stack.xml
pr2_app_manager/apps/pr2_pan_tilt/: CMakeLists.txt  package.xml  pan_tilt.launch  pr2_pan_tilt.app  stack.xml
pr2_app_manager/apps/pr2_pan_tilt/scripts/: head_teleop.py
pr2_app_manager/apps/pr2_props_app/: CMakeLists.txt  package.xml  pr2_props.app  pr2_repeat_props_high.app  pr2_repeat_props_low.app  stack.xml
pr2_app_manager/apps/pr2_props_app/launch/: pr2_props_app.launch  pr2_repeat_props_high.launch  pr2_repeat_props_low.launch
pr2_app_manager/apps/pr2_props_app/scripts/: prop_repeat  prop_runner
pr2_app_manager/apps/pr2_teleop_app/: .hgignore  .hgtags  CMakeLists.txt  package.xml  pr2_teleop.app  teleop.launch
pr2_app_manager/apps/pr2_web_apps/camera_application/: camera_application.app  camera_application.launch  package.xml
pr2_app_manager/apps/pr2_web_apps/camera_application/src/camera_application/cgibin/: camera_application_index.py
pr2_app_manager/apps/pr2_web_apps/camera_application/src/camera_application/jslib/: camera_app.js
pr2_app_manager/apps/pr2_web_apps/camera_application/src/camera_application/templates/: index.cs
pr2_app_manager/apps/pr2_web_apps/mannequin_application/: mannequin_application.app  package.xml
pr2_app_manager/apps/pr2_web_apps/mannequin_application/src/mannequin_application/cgibin/: mannequin_application_index.py
pr2_app_manager/apps/pr2_web_apps/mannequin_application/src/mannequin_application/templates/: index.cs
pr2_app_manager/apps/pr2_web_apps/map_tiler/: package.xml
pr2_app_manager/apps/pr2_web_apps/map_tiler/src/map_tiler/: __init__.py  handler.py  simplify.py  unavail.py
pr2_app_manager/apps/pr2_web_apps/navigation_application/: CMakeLists.txt  navigation_pr2.app  navigation_pr2.launch  navigation_pr2_listen.app  navigation_pr2_listen.launch  package.xml
pr2_app_manager/apps/pr2_web_apps/navigation_application/src/: navigation_visualizations.cpp
pr2_app_manager/apps/pr2_web_apps/navigation_application/src/navigation_application/cgibin/: navigation_pr2_index.py  navigation_pr2_listen_index.py  navigation_stage_index.py
pr2_app_manager/apps/pr2_web_apps/navigation_application/src/navigation_application/jslib/: map_viewer.js
pr2_app_manager/apps/pr2_web_apps/navigation_application/src/navigation_application/templates/: index.cs  style_desktop.css  (+1 more)
pr2_app_manager/apps/pr2_web_apps/pr2_addons_application/: package.xml  pr2_addons_application.app  pr2_addons_application.launch
pr2_app_manager/apps/pr2_web_apps/pr2_base_application/: package.xml  pr2_base_application.app  pr2_base_application.launch
pr2_app_manager/apps/pr2_web_apps/pr2_base_application/config/: costmap_config.yaml  dwa_local_planner.yaml  recovery_behaviors.yaml
pr2_app_manager/apps/pr2_web_apps/pr2_recharge_application/: package.xml  pr2_recharge_application.app  pr2_recharge_application.launch
pr2_app_manager/apps/pr2_web_apps/pr2_web_apps/: CMakeLists.txt  package.xml
pr2_app_manager/apps/pr2_web_apps/soccer_application/: package.xml  soccer_application.app  soccer_application.launch  soccer_exec.py
pr2_app_manager/apps/pr2_web_apps/teleop_ps3_application/: CMakeLists.txt  mainpage.dox  package.xml  teleop_ps3_application.app
pr2_app_manager/apps/pr2_web_apps/tuckarms_application/: CMakeLists.txt  package.xml  tuckarms_application.app  tuckarms_application.launch  tuckarms_application2.launch
pr2_app_manager/launch/: pr2_app_manager.launch  whole_pr2_apps.launch
pr2_app_manager/mock_apps/: pr2_apps.installed
pr2_app_manager/scripts/: control.py  install_applications.sh
pr2_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml
pr2_mannequin_mode/: CHANGELOG.rst  CMakeLists.txt  controllers.launch  controllers_nohead.launch  head_position_controller_loose.yaml  mainpage.dox  manifest.xml  mannequin_mode.app  package.xml  pr2_arm_controllers_loose.yaml  pr2_mannequin_mode.launch  pr2_mannequin_mode_nohead.launch  setup.py  trajectory_lock.launch  trajectory_lock.py
pr2_mannequin_mode/config/: head_position_controller_loose.yaml  pr2_arm_controllers_loose.yaml
pr2_mannequin_mode/launch/: controllers.launch  controllers_nohead.launch  pr2_mannequin_mode.launch  pr2_mannequin_mode_nohead.launch
pr2_mannequin_mode/scripts/: trajectory_lock.py
pr2_position_scripts/: CHANGELOG.rst  CMakeLists.txt  package.xml
pr2_position_scripts/scripts/: head_down.py  head_up.py  torso_down.py  torso_up.py
pr2_teleop/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  pr2_teleop.app  teleop.launch  teleop_joystick.launch  teleop_keyboard.launch
pr2_teleop/config/: teleop_ps4.yaml
pr2_teleop/launch/: teleop_joystick.launch  teleop_ps4_joystick.launch
pr2_teleop/scripts/: head_teleop.py  head_teleop_setter.py
pr2_teleop/src/: teleop_gripper.cpp  teleop_pr2.cpp
pr2_teleop_general/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_teleop_general/include/pr2_teleop_general/: pr2_teleop_general_commander.h
pr2_teleop_general/launch/: facedetector_rgb.launch  headcart_general_keyboard.launch  pr2_teleop_general_joystick.launch  pr2_teleop_general_joystick_bodyhead_only.launch  pr2_teleop_general_joystick_noik.launch  pr2_teleop_general_keyboard.launch  pr2_teleop_general_keyboard_bodyhead_only.launch  pr2_teleop_general_keyboard_noik.launch
pr2_teleop_general/src/: pr2_teleop_general_commander.cpp  pr2_teleop_general_joystick.cpp  pr2_teleop_general_keyboard.cpp
pr2_tuckarm/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  tuck_arms.app
pr2_tuckarm/launch/: tuck_arms.launch
pr2_tuckarm/scripts/: tuck_arms.py  tuckarm.py
(+27 files in other folders)
