<package>
  <name>pr2_app_manager</name>
  <version>0.5.22</version>
  <description>Scripts and tools for running the application manager on the PR2.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/application_manager</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Vijay Pradeep</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>app_manager</build_depend>
  <build_depend>willow_maps</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>app_manager</run_depend>
  <run_depend>willow_maps</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>app_manager</test_depend> -->
  <!-- <test_depend>willow_maps</test_depend> -->

</package>
