<package>
  <name>pr2_apps</name>
  <version>0.5.6</version>
  <description>Basic applications for the PR2 robot</description>
  <maintainer email="wim@willowgarage.com">Maintained by Wim Meeussen</maintainer>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_apps</url>

  <author>Maintained by Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pr2_position_scripts</run_depend>
  <run_depend>pr2_teleop_general</run_depend>
  <run_depend>pr2_tuckarm</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
