<package>
  <name>pr2_apps</name>
  <version>0.6.0</version>
  <description>Basic applications for the PR2 robot</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_apps</url>

  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pr2_position_scripts</run_depend>
  <run_depend>pr2_teleop_general</run_depend>
  <run_depend>pr2_tuckarm</run_depend>
  <run_depend>pr2_app_manager</run_depend>
  <run_depend>pr2_mannequin_mode</run_depend>
  <run_depend>pr2_kinematics</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
