<package>
  <name>pr2_position_scripts</name>
  <version>0.5.22</version>
  <description>This package contains a number of scripts to set various components of the PR2. They are used in the apps to improve usablity.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_position_scripts</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Tony Pratkanis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>

  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>pr2_controllers_msgs</test_depend> -->

  <export>

  </export>
</package>
