<package>
  <name>pr2_tuckarm</name>
  <version>0.5.22</version>
  <description>Tucks the arms of the PR2 robot into a safe position for moving the base of the robot.
     This also moves the arms out of the view of the tilting laser scanner, as much as possible.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_tuckarm</url>

  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>pr2_tuck_arms_action</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>pr2_tuck_arms_action</run_depend>

  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>pr2_mechanism_msgs</test_depend> -->
  <!-- <test_depend>pr2_tuck_arms_action</test_depend> -->

  <export>

  </export>
</package>
