<package>
  <name>pr2_make_a_map_app</name>
  <version>1.0.0</version>
  <description>Make maps using the PR2 robot.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/make_a_map</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Tony Pratkanis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_position_scripts</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mongodb</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>map_store</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_position_scripts</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>mongodb</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>map_store</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_position_scripts</test_depend> -->
  <!-- <test_depend>gmapping</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>mongodb</test_depend> -->
  <!-- <test_depend>topic_tools</test_depend> -->
  <!-- <test_depend>map_store</test_depend> -->

</package>
