<package>
  <name>pr2_props_app</name>
  <version>1.0.0</version>
  <description>Application files for running PR2 props</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_props</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Tony Pratkanis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pr2_props</build_depend>
  <build_depend>pr2_position_scripts</build_depend>
  <build_depend>std_srvs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pr2_props</run_depend>
  <run_depend>pr2_position_scripts</run_depend>
  <run_depend>std_srvs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>pr2_props</test_depend> -->
  <!-- <test_depend>pr2_position_scripts</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->

</package>
