<package>
  <name>pr2_teleop_app</name>
  <version>1.0.0</version>
  <description>Teleop application for the pr2</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Tony Pratkanis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_position_scripts</build_depend>
  <build_depend>topic_tools</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_position_scripts</run_depend>
  <run_depend>topic_tools</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_position_scripts</test_depend> -->
  <!-- <test_depend>topic_tools</test_depend> -->

</package>
