<package>
  <name>camera_application</name>
  <version>1.0.0</version>
  <description>A web application to view camera images.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://pr.willowgarage.com/wiki/camera_application</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Tim Field</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>webui</build_depend>
  <build_depend>rosweb</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>webui</run_depend>
  <run_depend>rosweb</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>webui</test_depend> -->
  <!-- <test_depend>rosweb</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

</package>
